<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_prescription_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amycui.medsminder.ui.PrescriptionEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_edit_activity"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="@dimen/appbar_elevation"
            />

        <!-- Upper left corner Prescription Image card. When empty have add a photo text and icon -->
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/prescription_image_card_size"
            android:layout_height="@dimen/prescription_image_card_size"
            android:clickable="true"
            android:id="@+id/pres_image_card"
            android:layout_below="@id/toolbar_edit_activity"
            android:layout_marginTop="@dimen/component_margin_general"
            android:contentDescription="@string/add_a_photo">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:id="@+id/pres_image"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="@dimen/prescription_add_image_icon_size"
                    android:layout_height="@dimen/prescription_add_image_icon_size"
                    android:src="@drawable/ic_add_a_photo_black_24dp"
                    android:layout_margin="@dimen/view_margin_general"
                    android:id="@+id/add_image_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_photo"
                    style="@style/TextAppearance.AppCompat.Notification.Title"
                    android:layout_gravity="center_horizontal|bottom"
                    android:id="@+id/add_image_text"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Drug Name label and edit text -->
        <TextView
            android:layout_toEndOf="@id/pres_image_card"
            android:layout_below="@id/toolbar_edit_activity"
            android:id="@+id/drug_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drug_name"
            android:textColor="@color/colorTextGray"
            style="@style/TextAppearance.AppCompat.Notification"
            android:layout_marginStart="@dimen/component_margin_general"
            android:layout_marginTop="@dimen/component_margin_general"
            />
        <EditText
            android:layout_below="@id/drug_name_label"
            android:layout_toEndOf="@id/pres_image_card"
            android:layout_alignParentEnd="true"
            android:id="@+id/drug_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:textColor="@color/colorTextBlack"
            android:hint="@string/drug_name_hint"
            android:layout_marginStart="@dimen/component_margin_general"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:backgroundTint="@color/colorEditTextDarkGray"
            android:contentDescription="@string/drug_name_description"
            android:nextFocusDown="@+id/drug_unit_edit"
            />
        <!-- Drug Unit label and edit text -->
        <TextView
            android:layout_toEndOf="@id/pres_image_card"
            android:layout_below="@id/drug_name_edit"
            android:id="@+id/drug_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextGray"
            style="@style/TextAppearance.AppCompat.Notification"
            android:text="@string/drug_unit"
            android:layout_marginStart="@dimen/component_margin_general" />
        <EditText
            android:layout_below="@id/drug_unit_label"
            android:layout_toEndOf="@id/pres_image_card"
            android:layout_alignParentEnd="true"
            android:id="@id/drug_unit_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:textColor="@color/colorTextBlack"
            android:hint="@string/drug_unit_hint"
            android:layout_marginStart="@dimen/component_margin_general"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:backgroundTint="@color/colorEditTextDarkGray"
            android:contentDescription="@string/drug_unit_description"
            android:nextFocusDown="@+id/dosage_edit"
            android:nextFocusUp="@id/drug_name_edit"
            />

        <!-- Prescription Date label and edit text -->
        <TextView
            android:layout_toEndOf="@id/pres_image_card"
            android:layout_below="@id/drug_unit_edit"
            android:id="@+id/pres_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextGray"
            style="@style/TextAppearance.AppCompat.Notification"
            android:text="@string/pres_date"
            android:layout_marginStart="@dimen/component_margin_general" />
        <EditText
            android:layout_below="@id/pres_date_label"
            android:layout_toEndOf="@id/pres_image_card"
            android:layout_alignParentEnd="true"
            android:id="@+id/pres_date_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:textColor="@color/colorTextBlack"
            android:hint="@string/pres_date_hint"
            android:layout_marginStart="@dimen/component_margin_general"
            android:maxLines="1"
            android:backgroundTint="@color/colorEditTextDarkGray"
            android:focusable="false"
            android:contentDescription="@string/pres_date_description"
            />
        <!-- Rx Instructions label -->
        <TextView
            android:layout_below="@id/pres_date_edit"
            android:id="@+id/rx_instructions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rx_instructions"
            android:textColor="@color/colorTextBlack"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:layout_marginTop="@dimen/component_margin_general"/>

        <!-- Dosage labels and edit text -->
        <TextView
            android:layout_below="@id/rx_instructions_label"
            android:id="@+id/dosage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosage"
            android:textColor="@color/colorTextGray"
            style="@style/TextAppearance.AppCompat.Notification"
            android:layout_marginTop="@dimen/view_margin_general"/>
        <EditText
            android:layout_below="@id/dosage_label"
            android:id="@id/dosage_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:textColor="@color/colorTextBlack"
            android:hint="@string/dosage_hint"
            android:maxLines="1"
            android:inputType="number"
            android:backgroundTint="@color/colorEditTextDarkGray"
            android:contentDescription="@string/dosage_description"
            android:nextFocusDown="@+id/frequency_edit"
            android:nextFocusUp="@id/drug_unit_edit"
            />
        <TextView
            android:layout_below="@id/dosage_label"
            android:layout_toEndOf="@id/dosage_edit"
            android:layout_alignBaseline="@id/dosage_edit"
            android:id="@+id/dosage_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosage_unit"
            android:textColor="@color/colorTextGray"
            style="@style/TextAppearance.AppCompat.Notification"
            android:layout_marginStart="@dimen/view_margin_general"
            />

        <!-- Frequency labels and edit text -->
        <TextView
            android:layout_below="@id/rx_instructions_label"
            android:layout_toEndOf="@id/dosage_unit_label"
            android:layout_alignBaseline="@id/dosage_label"
            android:id="@+id/frequency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency"
            android:textColor="@color/colorTextGray"
            style="@style/TextAppearance.AppCompat.Notification"
            android:layout_marginStart="@dimen/view_margin_general"
            android:layout_marginTop="@dimen/view_margin_general"/>
        <EditText
            android:layout_below="@id/frequency_label"
            android:layout_toEndOf="@id/dosage_unit_label"
            android:id="@id/frequency_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:textColor="@color/colorTextBlack"
            android:hint="@string/frequency_hint"
            android:maxLines="1"
            android:inputType="number"
            android:backgroundTint="@color/colorEditTextDarkGray"
            android:layout_marginStart="@dimen/view_margin_general"
            android:contentDescription="@string/frequency_description"
            android:nextFocusDown="@+id/repeat_spinner"
            android:nextFocusUp="@id/dosage_edit"
            />
        <TextView
            android:layout_below="@id/frequency_label"
            android:layout_toEndOf="@id/frequency_edit"
            android:layout_alignBaseline="@id/frequency_edit"
            android:id="@+id/frequency_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_unit"
            android:textColor="@color/colorTextGray"
            style="@style/TextAppearance.AppCompat.Notification"
            android:layout_marginStart="@dimen/view_margin_general"
            />

        <!-- Repeat labels and edit text -->
        <TextView
            android:layout_below="@id/rx_instructions_label"
            android:layout_toEndOf="@id/frequency_unit_label"
            android:layout_alignBaseline="@id/frequency_label"
            android:id="@+id/repeat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:textColor="@color/colorTextGray"
            style="@style/TextAppearance.AppCompat.Notification"
            android:layout_marginStart="@dimen/view_margin_general"
            android:layout_marginTop="@dimen/view_margin_general"/>
        <Spinner
            android:layout_below="@id/repeat_label"
            android:layout_toEndOf="@id/frequency_unit_label"
            android:layout_alignBaseline="@id/frequency_unit_label"
            android:id="@id/repeat_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:textColor="@color/colorTextBlack"
            android:backgroundTint="@color/colorEditTextDarkGray"
            android:layout_marginStart="@dimen/view_margin_general"
            android:contentDescription="@string/repeat_description"
            android:nextFocusDown="@+id/reminders_checkbox"
            android:nextFocusUp="@id/frequency_edit"
            tools:listitem=""
            />

        <!-- Reminders label and checkbox-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reminder_instruction"
            android:layout_below="@id/dosage_edit"
            android:layout_marginTop="@dimen/component_margin_general"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:text="@string/reminders_instruction_text"/>
        <CheckBox
            android:layout_below="@id/reminder_instruction"
            android:id="@id/reminders_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:contentDescription="@string/reminders"
            android:nextFocusUp="@id/repeat_spinner"
            />
        <TextView
            android:layout_below="@id/reminder_instruction"
            android:layout_toEndOf="@id/reminders_checkbox"
            android:layout_alignBaseline="@id/reminders_checkbox"
            android:id="@+id/reminders_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminders"
            android:textColor="@color/colorTextBlack"
            style="@style/TextAppearance.AppCompat.Notification.Title"
            android:layout_marginStart="@dimen/component_margin_general"
            />

        <!-- Alarm -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alarmLayout"
            android:layout_below="@id/reminders_checkbox"
            android:orientation="vertical">

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
